fix(yalb-974): z-index on breadcrumb navigation buttons

--- a/components/03-organisms/menu/breadcrumbs/_yds-breadcrumbs.scss
+++ b/components/03-organisms/menu/breadcrumbs/_yds-breadcrumbs.scss
@@ -68,10 +68,12 @@
 
   &--left {
     left: 0;
+    z-index: -1;
 
     [data-scroll-indicator='left'] &,
     [data-scroll-indicator='both'] & {
       opacity: 1;
+      z-index: 0;
     }
 
     [data-scroll-indicator='none'],
@@ -83,10 +85,12 @@
   &--right {
     right: 0;
     transform: rotate(-180deg);
+    z-index: -1;
 
     [data-scroll-indicator='right'] &,
     [data-scroll-indicator='both'] & {
       opacity: 1;
+      z-index: 0;
     }
 
     [data-scroll-indicator='none'] &,
@@ -171,9 +175,5 @@
     color: var(--color-basic-brown-gray);
     font-weight: var(--font-weights-mallory-book);
     cursor: default;
-  }
-
-  [data-scroll-indicator='none'] & {
-    z-index: 1;
   }
 }
